[gd_scene load_steps=35 format=3 uid="uid://d0ry0x7wgd1io"]

[ext_resource type="Script" uid="uid://bpvh6r4yq0eke" path="res://Scenes/Player/player.gd" id="1_a3d8c"]
[ext_resource type="Texture2D" uid="uid://dfbqcbc87srei" path="res://assets/player/player.png" id="1_uvnfx"]
[ext_resource type="PackedScene" uid="uid://bw7fyfwokf3x4" path="res://Scenes/PlayerCam/player_cam.tscn" id="3_xpcdj"]
[ext_resource type="PackedScene" uid="uid://wvf275ofp1tt" path="res://Scenes/Shooter/shooter.tscn" id="4_mtuoh"]
[ext_resource type="AudioStream" uid="uid://c2568j1qdf6wl" path="res://assets/sound/jump.wav" id="5_htcer"]

[sub_resource type="CapsuleShape2D" id="CapsuleShape2D_uvnfx"]
radius = 7.0
height = 22.0

[sub_resource type="Animation" id="Animation_mtuoh"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [13]
}

[sub_resource type="Animation" id="Animation_0u5uq"]
resource_name = "fall"
length = 0.1
step = 0.1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [18]
}

[sub_resource type="Animation" id="Animation_jlvik"]
resource_name = "hurt"
length = 0.2
loop_mode = 1
step = 0.1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.1),
"transitions": PackedFloat32Array(1, 1),
"update": 1,
"values": [11, 12]
}

[sub_resource type="Animation" id="Animation_xpcdj"]
resource_name = "idle"
length = 0.4
loop_mode = 1
step = 0.1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.1, 0.2, 0.3),
"transitions": PackedFloat32Array(1, 1, 1, 1),
"update": 1,
"values": [13, 14, 15, 16]
}

[sub_resource type="Animation" id="Animation_dd0ac"]
resource_name = "jump"
length = 0.1
step = 0.1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [17]
}

[sub_resource type="Animation" id="Animation_htcer"]
resource_name = "run"
length = 0.4
loop_mode = 1
step = 0.1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.1, 0.2, 0.3),
"transitions": PackedFloat32Array(1, 1, 1, 1),
"update": 1,
"values": [0, 1, 2, 3]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_mtuoh"]
_data = {
&"RESET": SubResource("Animation_mtuoh"),
&"fall": SubResource("Animation_0u5uq"),
&"hurt": SubResource("Animation_jlvik"),
&"idle": SubResource("Animation_xpcdj"),
&"jump": SubResource("Animation_dd0ac"),
&"run": SubResource("Animation_htcer")
}

[sub_resource type="AnimationNodeAnimation" id="AnimationNodeAnimation_xpcdj"]
animation = &"fall"

[sub_resource type="AnimationNodeAnimation" id="AnimationNodeAnimation_mtuoh"]
animation = &"jump"

[sub_resource type="AnimationNodeStateMachineTransition" id="AnimationNodeStateMachineTransition_htcer"]
advance_mode = 2

[sub_resource type="AnimationNodeStateMachineTransition" id="AnimationNodeStateMachineTransition_dd0ac"]
advance_mode = 2
advance_expression = "velocity.y < 0.0"

[sub_resource type="AnimationNodeStateMachineTransition" id="AnimationNodeStateMachineTransition_jhyir"]
advance_mode = 2
advance_expression = "velocity.y > 0.0"

[sub_resource type="AnimationNodeStateMachine" id="AnimationNodeStateMachine_74mp2"]
states/fall/node = SubResource("AnimationNodeAnimation_xpcdj")
states/fall/position = Vector2(357, 99)
states/jump/node = SubResource("AnimationNodeAnimation_mtuoh")
states/jump/position = Vector2(515.5, 99.75)
transitions = ["Start", "fall", SubResource("AnimationNodeStateMachineTransition_htcer"), "fall", "jump", SubResource("AnimationNodeStateMachineTransition_dd0ac"), "jump", "fall", SubResource("AnimationNodeStateMachineTransition_jhyir")]

[sub_resource type="AnimationNodeAnimation" id="AnimationNodeAnimation_htcer"]
animation = &"idle"

[sub_resource type="AnimationNodeAnimation" id="AnimationNodeAnimation_dd0ac"]
animation = &"run"

[sub_resource type="AnimationNodeStateMachineTransition" id="AnimationNodeStateMachineTransition_0u5uq"]
advance_mode = 2

[sub_resource type="AnimationNodeStateMachineTransition" id="AnimationNodeStateMachineTransition_jlvik"]
advance_mode = 2
advance_expression = "!is_equal_approx(velocity.x, 0.0)"

[sub_resource type="AnimationNodeStateMachineTransition" id="AnimationNodeStateMachineTransition_gk6dx"]
advance_mode = 2
advance_expression = "is_equal_approx(velocity.x, 0.0)"

[sub_resource type="AnimationNodeStateMachine" id="AnimationNodeStateMachine_jhyir"]
states/idle/node = SubResource("AnimationNodeAnimation_htcer")
states/idle/position = Vector2(379.5, 101.5)
states/run/node = SubResource("AnimationNodeAnimation_dd0ac")
states/run/position = Vector2(525.5, 100.75)
transitions = ["Start", "idle", SubResource("AnimationNodeStateMachineTransition_0u5uq"), "idle", "run", SubResource("AnimationNodeStateMachineTransition_jlvik"), "run", "idle", SubResource("AnimationNodeStateMachineTransition_gk6dx")]

[sub_resource type="AnimationNodeAnimation" id="AnimationNodeAnimation_0u5uq"]
animation = &"hurt"

[sub_resource type="AnimationNodeStateMachineTransition" id="AnimationNodeStateMachineTransition_oikmp"]
advance_mode = 2

[sub_resource type="AnimationNodeStateMachineTransition" id="AnimationNodeStateMachineTransition_xpcdj"]
advance_mode = 2
advance_expression = "!is_on_floor()"

[sub_resource type="AnimationNodeStateMachineTransition" id="AnimationNodeStateMachineTransition_mtuoh"]
advance_mode = 2
advance_expression = "is_on_floor()"

[sub_resource type="AnimationNodeStateMachineTransition" id="AnimationNodeStateMachineTransition_74mp2"]
advance_mode = 2
advance_expression = "_is_hurt"

[sub_resource type="AnimationNodeStateMachineTransition" id="AnimationNodeStateMachineTransition_06tpx"]
advance_mode = 2
advance_expression = "_is_hurt"

[sub_resource type="AnimationNodeStateMachineTransition" id="AnimationNodeStateMachineTransition_dey5f"]
advance_mode = 2
advance_expression = "!_is_hurt"

[sub_resource type="AnimationNodeStateMachine" id="AnimationNodeStateMachine_htcer"]
states/Air/node = SubResource("AnimationNodeStateMachine_74mp2")
states/Air/position = Vector2(478.7, 100.216)
states/Grounded/node = SubResource("AnimationNodeStateMachine_jhyir")
states/Grounded/position = Vector2(267.7, 100.573)
states/Start/position = Vector2(27, 100)
states/hurt/node = SubResource("AnimationNodeAnimation_0u5uq")
states/hurt/position = Vector2(388.2, 215.225)
transitions = ["Start", "Grounded", SubResource("AnimationNodeStateMachineTransition_oikmp"), "Grounded", "Air", SubResource("AnimationNodeStateMachineTransition_xpcdj"), "Air", "Grounded", SubResource("AnimationNodeStateMachineTransition_mtuoh"), "Grounded", "hurt", SubResource("AnimationNodeStateMachineTransition_74mp2"), "Air", "hurt", SubResource("AnimationNodeStateMachineTransition_06tpx"), "hurt", "Grounded", SubResource("AnimationNodeStateMachineTransition_dey5f")]
graph_offset = Vector2(-152.1, 47.25)

[sub_resource type="CapsuleShape2D" id="CapsuleShape2D_xpcdj"]
radius = 7.0
height = 20.0

[node name="Player" type="CharacterBody2D"]
collision_layer = 0
collision_mask = 97
script = ExtResource("1_a3d8c")

[node name="Sprite2D" type="Sprite2D" parent="."]
texture = ExtResource("1_uvnfx")
hframes = 19
frame = 13

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2(0, 5)
shape = SubResource("CapsuleShape2D_uvnfx")

[node name="PlayerCam" parent="." instance=ExtResource("3_xpcdj")]

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
libraries = {
&"": SubResource("AnimationLibrary_mtuoh")
}
autoplay = "idle"

[node name="AnimationTree" type="AnimationTree" parent="."]
tree_root = SubResource("AnimationNodeStateMachine_htcer")
advance_expression_base_node = NodePath("..")
anim_player = NodePath("../AnimationPlayer")

[node name="DebugLabel" type="Label" parent="."]
visible = false
anchors_preset = 2
anchor_top = 1.0
anchor_bottom = 1.0
offset_top = -71.0
offset_right = 179.0
offset_bottom = 331.0
grow_vertical = 0
scale = Vector2(0.139868, 0.139868)
theme_override_colors/font_outline_color = Color(0, 0, 0, 1)
theme_override_constants/outline_size = 20
theme_override_font_sizes/font_size = 96
text = "XXX
XXX
XXX"

[node name="HitBox" type="Area2D" parent="."]
collision_layer = 2
collision_mask = 24

[node name="CollisionShape2D" type="CollisionShape2D" parent="HitBox"]
position = Vector2(0, 4)
shape = SubResource("CapsuleShape2D_xpcdj")

[node name="Shooter" parent="." instance=ExtResource("4_mtuoh")]
_speed = 250.0

[node name="Sound" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource("5_htcer")
volume_db = -10.0

[node name="FallTimer" type="Timer" parent="."]
wait_time = 0.1
one_shot = true

[node name="HurtTimer" type="Timer" parent="."]
wait_time = 1.2
one_shot = true

[connection signal="animation_finished" from="AnimationPlayer" to="." method="_on_animation_player_animation_finished"]
[connection signal="area_entered" from="HitBox" to="." method="_on_hit_box_area_entered"]
[connection signal="timeout" from="FallTimer" to="." method="_on_fall_timer_timeout"]
[connection signal="timeout" from="HurtTimer" to="." method="_on_hurt_timer_timeout"]
